<resources>
    <string name="api_key">for my eyes only ;)</string>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="movieDatabase">The Movie Database</string>
    <string name="scoresApp">Scores App</string>
    <string name="libaryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstoneMyOwnApp">Capstone: My Own App</string>
    <string name="myNanoDegreeApps">My Nanodegree Apps!</string>
    <string name="toastMsgLibraryApp">This button will launch my Library app!</string>
    <string name="toastMsgScoresApp">This button will launch my Scores app!</string>
    <string name="toastMsgBiggerApp">This button will launch my Build It Bigger app!</string>
    <string name="toastMsgXyzReader">This button will launch my XYZ Reader app!</string>
    <string name="toastMsgCapstoneApp">This button will launch my Capstone app</string>
    <string name="action_refresh">Refresh</string>
    <string name="logo_desc">App logo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sort_order_popularity">popularity.desc</string>
    <string name="sort_order_vote_average">vote_average.desc</string>
    <string name="popularity">Most Popular</string>
    <string name="highest_rating">Highest Rating</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="synopsis_label">Synopsis:</string>

</resources>
