<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/material_grey_600">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/my_nano_degree_aps"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/button_spotify_streamer"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/material_deep_teal_200"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/button_scores_app"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/material_deep_teal_200"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libaryApp"
        android:id="@+id/button_library_app"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/material_deep_teal_200"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/button_build_it_bigger"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:backgroundTint="@color/material_deep_teal_200"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:id="@+id/button_xyz_reader"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/material_deep_teal_200"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstoneMyOwnApp"
        android:id="@+id/button_capstone_my_app"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#4e11a3"
        android:textColor="#ffffff"/>
</LinearLayout>