<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/detailsRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/color_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TextView
        android:id="@+id/movieRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/rating_label"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/movieRatingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/toolbar"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/movieReleaseDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieRatingTitle"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:text="@string/release_date_label"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/movieReleaseDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/movieRatingValue"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/movieSynopsisTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieReleaseDateTitle"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:text="@string/synopsis_label"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/movieSynopsisValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieSynopsisTitle"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:scrollbars="vertical"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="0dp"/>
</RelativeLayout>